Add new page Detail

--- a/src/components/main/add-feedback/addFeedback.scss
+++ b/src/components/main/add-feedback/addFeedback.scss
@@ -26,6 +26,7 @@
   }
 
   &__select {
+    background-color: transparent !important;
     margin-left: 10px;
     font-weight: 400;
     font-size: 14px;
