--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,3 +1,7 @@
 .container {
-  max-width: 1300px !important;
+  max-width: 1280px !important;
+}
+
+.container-2 {
+  max-width: 800px !important;
 }
