--- a/src/components/button/feedBtn.scss
+++ b/src/components/button/feedBtn.scss
@@ -16,3 +16,11 @@
   line-height: 20px;
   color: #F2F4FE;
 }
+
+.editBtn {
+  background-color: #4661E6 !important;
+
+  &:hover {
+    background-color: #7C91F9 !important;
+  }
+}
